# FoldSeekStrucAnnoFlow

./: .gitignore  .nextflow.log.1  LICENSE  noxfile.py  pyproject.toml
.github/workflows/: actions.yml
FoldSeekStrucAnnoFlow/: main.nf  nexflow.config  nextflow.config  nextflow.config.bk  readme.txt
FoldSeekStrucAnnoFlow/modules/: chop_pdbs.nf  cif_to_pdb.nf  create_db.nf  create_dummy_file.nf  extract_pdbs_from_zip.nf  foldseek_create_db.nf  pdb_symlinks.nf  pdbs_to_ids.nf  run_deepfri.nf  run_foldseek.nf  run_foldseek_convertails.nf
FoldSeekStrucAnnoFlow/modules/chainsaw/: main.nf
FoldSeekStrucAnnoFlow/modules/merizo/: main.nf
FoldSeekStrucAnnoFlow/workflows/: chainsaw.nf  merizo.nf
conf/: container.config  singularity.config
containers/: bash-utils.def  foldseek-anno-bash-utils.def  foldseek-anno-deepfri.def  foldseek-anno-foldseek.def  foldseek-anno-python_env.def
